# pyflexweb

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  hacking.ipynb  pyproject.toml  test_change.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/prompts/: python.md
.github/workflows/: ci.yml  publish.yml
pyflexweb/: __init__.py  cli.py  client.py  database.py  handlers.py
scripts/: setup-pypi.sh
tests/: test_cli.py  test_database.py  test_handlers.py
