[build-system]
requires = [ "setuptools>=42", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "pyflexweb"
version = "0.1.1"
description = "Download IBKR Flex reports using the Interactive Brokers flex web service"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [ "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
dependencies = [ "requests>=2.25.0", "platformdirs>=2.0.0", "click>=8.1.8", "importlib_metadata>=1.0; python_version<'3.8'",]
[[project.authors]]
name = "Your Name"
email = "your.email@example.com"

[dependency-groups]
dev = [ "pytest>=8.3.5",]

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [ "pytest>=6.0.0", "ruff>=0.0.240", "isort>=5.0.0", "toml>=0.10.0", "pre-commit>=3.0.0",]

[project.scripts]
pyflexweb = "pyflexweb.cli:main"

[tool.setuptools]
packages = [ "pyflexweb",]

[tool.ruff]
line-length = 140
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.pytest]
testpaths = [ "tests",]
